--- a/rapport_stage.tex
+++ b/rapport_stage.tex
@@ -18,6 +18,7 @@
 % \usepackage{hyperref}
 \usepackage[hidelinks]{hyperref}
 % \usepackage{minted}
+% \usepackage{glossaries}
 
 \newtheorem{definition}{Définition}
 
@@ -27,6 +28,8 @@
 
 \setlength{\headheight}{0.5cm}
 \setlength{\headsep}{0.5cm}
+
+\renewcommand{\baselinestretch}{1.5}
 
 \geometry{hmargin=2.5cm,vmargin=2.5cm}
 
