--- a/src/tex/chapter_1.tex
+++ b/src/tex/chapter_1.tex
@@ -2,9 +2,22 @@
     Dans le cadre de ma dernière année de licence informatique à l'université des Antilles de Guadeloupe, je dois effectuer un stage d'une durée de 24 jours. Ce stage vise à clôturer mon cursus universitaire.
     Il me permet de mettre en pratique mes acquis en informatique et de me familiariser avec la vie professionnelle.
 
-    \vspace{0.5cm}
+    \vspace{0.2cm}
+
+    Projet avec le laboratoire de biologie, le projet concerne l'analyse de déplacements d'insectes afin de déterminer leur préférence sur des zones marquées par des odeurs, en environnement contrôlé (aquarium en laboratoire).
+
+    \vspace{0.2cm}
+
+    La mission est de configurer un système d'acquisition vidéo à base d'une Raspberry Pi, et de développer une interface intuitive afin de piloter cette acquisition de manière qu'elle puise être conduite par un biologiste.
+
+    \vspace{0.2cm}
+
+    Comment pourrons nous concevoir un dispositif de prise de vue qui soit performant et avec une application qui soit facile à utiliser ? 
+    En m'aidant de mon expérience en informatique et de ma recherche scientifique, nous allons essayer de mettre œuvre un dispositif de prise de vue qui soit performant et avec une application dédiée à la prise de vue.
+
+    \vspace{0.2cm}
+
     Dans ce rapport, je présente mon environnement de travail, ainsi que la mission principale que j'ai été amené à accomplir au sein du laboratoire ISYEB, à savoir, la conception d'un dispositif de prise de vue ainsi que la réalisation d'une application permettant l'acquisition de prise de vue.
     En effet, le laboratoire ISYEB possède déjà un dispositif permettant les prises de vue, mais il s'agit d'un dispositif provisoire que les biologistes ont décidé de remplacer.
-    
-    % Dans ce rapport, je vais décrire le contexte de l'entreprise, la problématique, les objectifs, les étapes de réalisation du logiciel de capture vidéo.    
+
 
