--- a/src/tex/chapter_4.tex
+++ b/src/tex/chapter_4.tex
@@ -1,20 +1,10 @@
 \chapter{Travail réalisé}
-    Avant de commencer, je vous présente mon travail sur le sujet du stage.\\[0.2cm]
-    Dans un premier temps, il faudra installer le système Raspbian. Une fois l’installation faire, il faudra configurer le système. Avant de commencer l’application, il me faudra faite quelques tests afin de vérifier le bon fonctionnement. Une fois cela terminé, il me faut vérifier que la caméra fonctionne correctement.
-
+    Avant de commencer nous allons introduire le travail à réaliser. Dans un premier temps, nous allons présenter les différents matériels utilisés afin de concevoir le dispositif de prise de vue. Par la suite, le déroulement du montage, ainsi que de l'installation et la configuration du dispositif. Une fois cela fait, nous allons réaliser l'application permettant l'interaction entre le dispositif et l'utilisateur afin de pouvoir effectuer la prise de vue.
+    
     \section{Mon travail}
     % Présentation du travail à effectuer sur le projet.
-    \begin{flushleft}
-        % A faire |!|
-        Ma mission est de réaliser l'installation et de configurer un dispositif de capture vidéo réalisé par un \textit{Raspberry Pi} ainsi que de développer une application conviviale pour la gestion des vidéos.\\[0.2cm]
-    
-        % A revoir |!|
-        Dans un premier temps, il faudra installer le système Raspbian.
-        Une fois l'installation faite, il faudra configurer le système.
-        Avant de commencer l'application, il me faudra faire quelques tests afin de vérifier le bon fonctionnement.
-        Une fois cela terminé, il me faut vérifier que la caméra fonctionne correctement.    
-    \end{flushleft}
-
+        Ma mission est de réaliser l'installation et de configurer un dispositif de capture vidéo réalisé par un \textit{Raspberry Pi} ainsi que de développer une application conviviale pour la gestion des vidéos.
+ 
     \section{Réception du matériel}
         \subsection{Raspberry Pi}
         Le \textit{Raspberry Pi} est un ordinateur portable de petite taille, doté d'un processeur \underline{$ ARM^{\ref{def:ARM}}$}  et d'un système d'exploitation Linux.
@@ -73,11 +63,11 @@
         \subsection{Ecran LCD (Raspberry Pi)}
         Avec le \textit{Raspberry Pi} un écran LCD de 7 pouces permettant d'interagir avec l'ordinateur grâce à son écran tactile. 
 
-        \begin{flushleft}
-            L'Intérêt majeur de ce type de périphérique c'est sa finesse.
-            En effet, dans un laboratoire il n’est pas toujours facile d'avoir un grand écran.
-            De ce fait avoir un écran de petite taille qu'on peut tenir dans nos mains tout en ayant la possibilité d'utiliser l'écran tactile pour interagir avec l'ordinateur nous permettant de nous dispenser de clavier et de souris.
-        \end{flushleft}
+        \vspace{0.2cm}
+
+        L'Intérêt majeur de ce type de périphérique c'est sa finesse.
+        En effet, dans un laboratoire il n’est pas toujours facile d'avoir un grand écran.
+        De ce fait avoir un écran de petite taille qu'on peut tenir dans nos mains tout en ayant la possibilité d'utiliser l'écran tactile pour interagir avec l'ordinateur nous permettant de nous dispenser de clavier et de souris.
 
         \begin{figure}[ht]
             \centering
@@ -119,7 +109,7 @@
             \subsection{Montage du matériel}
             Le Raspberry Pi possède un port CSI 'Camera Serial Interface' (signifiant en anglais interface série pour caméra, CSI) est un standard d'interface électronique entre une caméra (un capteur ou une source vidéo) et un microprocesseur.
 
-            \begin{figure}[h]
+            \begin{figure}[ht]
                 \centering
                 \includegraphics[scale=0.04]{unpack.jpeg} 
                 \caption{Matériel assemblé et prêt à l'emploi}
@@ -135,32 +125,30 @@
 
             \vspace{0.2cm}
 
-            \begin{flushleft}
-                Raspberry Pi Imager est le moyen rapide et facile d'installer Raspberry Pi \underline{$OS^{\ref{def:OS}}$} sur une microSD.\\[0.2cm]
+            
+            Raspberry Pi Imager est le moyen rapide et facile d'installer Raspberry Pi \underline{$OS^{\ref{def:OS}}$} sur une microSD.
+            Il nous faut télécharger le fichier d'installation sur le site web Raspberry.com et de l'installer.
 
-                Il nous faut télécharger le fichier d'installation sur le site web Raspberry.com et de l'installer.\\[0.2cm]
-
-                Nous obtenons alors l'aperçu de la figure 4.4.\\[0.2cm]
-                Comme nous pouvons le voir sur cette figure, le logiciel nous demande de choisir l'OS que nous souhaitons installer.
-                On lui indique donc que nous voulons installer l'OS Raspbian en 32 bits. Et on choisit notre stockage qui dans notre cas est une microSD.
-
-                \vspace{0.2cm}
-
-                Une fois cela fait, on lance l'écriture, le logiciel va télécharger l'OS et installer l'OS sur la microSD.
-
-            \begin{figure}[t]
+            \begin{figure}[ht]
                 \centering
                 \includegraphics[scale=0.3]{Installation_1.png} 
                 \caption{Interface "Raspberry Pi Imager"}
             \end{figure}
 
-            \end{flushleft}
+            Nous obtenons alors l'aperçu de la figure 4.5.
+            Comme nous pouvons le voir sur cette figure, le logiciel nous demande de choisir l'OS que nous souhaitons installer.
+            On lui indique donc que nous voulons installer l'OS Raspbian en 32 bits. Et on choisit notre stockage qui dans notre cas est une microSD.
+
+            \vspace{0.2cm}
+
+            Une fois cela fait, on lance l'écriture, le logiciel va télécharger l'OS et installer l'OS sur la microSD.
+
     
             \subsection{Configuration du matériel}
             Avant de pouvoir utiliser le module caméra, activer l'interface caméra.
             Pour ce faire nous allons utiliser la commande \textbf{sudo raspi-config}.
 
-            \begin{figure}[h]
+            \begin{figure}[ht]
                 \centering
                 \includegraphics[scale=0.3]{raspi-config.png} 
                 \caption{Interface "raspi-config"}
@@ -170,7 +158,7 @@
                 
                 Une fois dans \textbf{Raspi-config}, nous allons choisir la section \textbf{Interface section}.
             
-                \begin{figure}[h]
+                \begin{figure}[ht]
                     \centering
                     \includegraphics[scale=0.3]{raspiconfig-camera-option.jpg} 
                     \caption{camera option (raspi-config)}
@@ -228,31 +216,27 @@
             \item Scratch
         \end{itemize}
 
-        \begin{flushleft}
-            On peut voir que le langage Python est le plus utilisé pour le (Raspberry Pi) système d'exploitation Raspbian.
+        On peut voir que le langage Python est le plus utilisé pour le (Raspberry Pi) système d'exploitation Raspbian. Ce qui est normal, car le Pi dans "Raspberry Pi" signifie "Python". Il a donc le mérite d'être le choix par défaut.
 
-            Ce qui est normal, car le Pi dans "Raspberry Pi" signifie "Python". Il a donc le mérite d'être le choix par défaut.
+        \vspace{0.2cm}
 
-            Afin de pouvoir nous décider sur le langage de programmation, il me faut chercher la compatibilité des \underline{$API^{\ref{def:API}}$} pour la camera. 
+        Afin de pouvoir nous décider sur le langage de programmation, il me faut chercher la compatibilité des \underline{$API^{\ref{def:API}}$} pour la camera. Il s'avère que l'API PiCamera est installée par défaut sur le système d'exploitation Raspbian. Puisque le langage Python et l'API PiCamera sont compatibles, et installer par défaut sur le système d'exploitation Raspbian, il est possible de choisir le langage Python.
 
-            Il s'avère que l'API PiCamera est installée par défaut sur le système d'exploitation Raspbian.
+        \vspace{0.2cm}
+    
+        Même si le langage de programmation JavaScript ne figure pas dans cette liste, il est très utilisé, il est donc très intéressant de le choisir.
+        Avec electron et nodejs, nous pouvons très bien créer une application multiplateforme. De plus, l'API PiCamera est disponible pour le langage JavaScript.
+    
+        Mais par manque de temps, nodejs et electron ne sont pas installés par défaut sur le Raspberry Pi. De ce fait nous allons utiliser le langage Python pour la programmation du logiciel.
 
-            Puisque le langage Python et l'API PiCamera sont compatibles, et installer par défaut sur le système d'exploitation Raspbian, il est possible de choisir le langage Python.
+        \vspace{0.2cm}
         
-            Même si le langage de programmation JavaScript ne figure pas dans cette liste, il est très utilisé, il est donc très intéressant de le choisir.
-            Avec electron et nodejs, nous pouvons très bien créer une application multiplateforme.\\[0.2cm]
-            De plus, l'API PiCamera est disponible pour le langage JavaScript.
+        Python est un langage de programmation interprété, multi-paradigme et multiplateformes. Il favorise la programmation impérative structurée, fonctionnelle et orientée objet.
         
-            Mais par manque de temps, nodejs et electron ne sont pas installés par défaut sur le Raspberry Pi.\\[0.2cm]
-        
-            De ce fait nous allons utiliser le langage Python pour la programmation du logiciel.
-            
-            Python est un langage de programmation interprété, multi-paradigme et multiplateformes. Il favorise la programmation impérative structurée, fonctionnelle et orientée objet.
-            
-            % définir le multi-paradigme
-            % définir le multiplateformes
-            % Programattion interprété, structurée, fonctionnelle et orientée objet
-        \end{flushleft}
+        % définir le multi-paradigme
+        % définir le multiplateformes
+        % Programattion interprété, structurée, fonctionnelle et orientée objet
+
 
     % Qu'est ce que le langage Python ?
     
@@ -267,14 +251,13 @@
             \item \textbf{time}
         \end{itemize}
 
-        \begin{flushleft}
-            Maintenant que nos modules sont importés, nous allons créer une maquette du menu principal de l'application.
-            Cette maquette nous permettra d'avoir un aperçu de l'application.
-            Et nous permettra de concevoir le \underline{$GUI^{\ref{def:GUI}}$} de l'application à l'aide de Tkinter.            
-        \end{flushleft}
+        
+        Maintenant que nos modules sont importés, nous allons créer une maquette du menu principal de l'application.
+        Cette maquette nous permettra d'avoir un aperçu de l'application.
+        Et nous permettra de concevoir le \underline{$GUI^{\ref{def:GUI}}$} de l'application à l'aide de Tkinter.            
 
         \subsection{Création de l'interface graphique}
-            \begin{figure}[h]
+            \begin{figure}[ht]
                 \centering
                 \includegraphics[scale=0.3]{maquette.png} 
                 \caption{Maquette de l'application}
@@ -288,79 +271,55 @@
                     \item \textbf{class} \textit{AppOptionsSection}
                     \item \textbf{class} \textit{AppUtilitySection}
                     \item \textbf{class} \textit{AppHelpSection}
-                \end{itemize}
-                
-                La classe \textit{App} est la classe principale de notre application.
-                C'est ici que nous allons définir la taille de la fenêtre, la couleur de fond, le titre de la fenêtre, le logo de l'application, ... .
-                C'est également dans cette classe que nous allons lancer notre menu principal par la méthode : \textbf{def \_\_init\_\_(self, master)}.
-            
-                La méthode \_\_init\_\_ peut être appelée lorsqu'un objet est créé à partir de la classe, et un accès est nécessaire pour initialiser les attributs de la classe.
-
-                \vspace{0.2cm}
-
-                Le menu principal est représenté par la maquette de la figure 4.8.
-
-                \vspace{0.2cm}
-
-                Les 4 autres class sont les classes qui représentent les sections de l'application.
-                Lorsque que l'utilisateur clique sur un des boutons du menu principal, il se rend dans la section correspondante.
-
-                % tk.frame 
-
+                \end{itemize}                            
             \end{flushleft}
-        
-        \vspace{1cm}
 
+            La classe \textit{App} est la classe principale de notre application.
+            C'est ici que nous allons définir la taille de la fenêtre, la couleur de fond, le titre de la fenêtre, le logo de l'application, etc.
+
+            \vspace{0.2cm}
+
+            C'est également dans cette classe que nous allons lancer notre menu principal par la méthode : \textbf{def \_\_init\_\_(self, master)}. La méthode \_\_init\_\_ peut être appelée lorsqu'un objet est créé à partir de la classe, et un accès est nécessaire pour initialiser les attributs de la classe. Le menu principal est représenté par la maquette de la figure 4.8.
+
+            \vspace{0.2cm}
+
+            Les 4 autres class sont les classes qui représentent les sections de l'application.
+            Lorsque que l'utilisateur clique sur un des boutons du menu principal, il se rend dans la section correspondante.
+        
         \subsection{Fonction Start Recording}
             Afin de réaliser l'application, nous allons commencer par concevoir la fonction cœur de l'application.
             C'est à dire la fonction qui va nous permettre de lancer un enregistrement et de l'arrêter.    
             Cette fonction, son fonctionnement est érigé par la figure 4.9
-            \begin{figure}[h]
+
+            \begin{figure}[ht]
                 \centering
                 \includegraphics[scale=0.4]{diagram_activité_enregistrement.png} 
                 \caption{Diagramme d'activité de la fonction "Démarrer un Enregistrement"}
             \end{figure}
 
-            \begin{flushleft}
-                D'après notre diagramme d'activité, il nous faut commencer l'enregistrement lorsque l'utilisateur clique sur le bouton "Start".
+            % \newpage
+            
+            D'après notre diagramme d'activité, il nous faut commencer l'enregistrement lorsque l'utilisateur clique sur le bouton "Start".Avant de pouvoir démarrer un enregistrement, il faut initialiser la caméra, pour cela, la documentation nous indique une fonction pour cela qui est : \textbf{camera = PiCamera()}. Une fois la caméra initialisée, nous pouvons commencer à traiter la demande de l'utilisateur.
 
-                \vspace{0.2cm}
+            \vspace{0.2cm}
+            
+            \textbf{AskForSaveFile} est une fonction de tkinter qui va nous permettre de demander à l'utilisateur de saisir un nom de fichier et de lui permettre de choisir l'emplacement de sauvegarde. Une fois que l'utilisateur a saisi le nom de fichier, nous pouvons commencer à enregistrer avec la fonction de l'API PiCamera : \textbf{camera.start\_recording(nomDuFichier, format)}.
+            L'enregistrement restera actif tant que l'utilisateur ne clique pas sur le bouton "Stop".
+            L'arrêt de l'enregistrement se fait avec la fonction de l'API PiCamera : \textbf{camera.stop\_recording()}.
 
-                Avant de pouvoir démarrer un enregistrement, il faut initialiser la caméra, pour cela, la documentation nous indique une fonction pour cela qui est : \textbf{camera = PiCamera()}.
+            \vspace{0.2cm}
 
-                Une fois la caméra initialisée, nous pouvons commencer à traiter la demande de l'utilisateur.
+            Lors des tests, nous avons remarqué qu'arrêter l'enregistrement de manière manuelle est parfois pas très optimale.
+            Nous avons donc décider de créer une fonction nous permettant de stopper de manière automatique l'enregistrement. Il s'agit de permettre à l'utilisateur de saisir un temps en minutes et de lancer l'enregistrement. Le temps saisi en minute de l'utilisateur sera converti en secondes.
 
-                
-                \textbf{AskForSaveFile} est une fonction de tkinter qui va nous permettre de demander à l'utilisateur de saisir un nom de fichier et de lui permettre de choisir l'emplacement de sauvegarde.
+            \vspace{0.2cm}
 
-                \vspace{0.2cm}
+            De ce fait, l'API PiCamera nous permet de définir le temps d'enregistrement en secondes avec la fonction : \textbf{camera.wait\_recording(tempsEnSeconde)}. Cependant cette fonction possède un défaut, elle agit comme une fonction \textbf{wait()} classique. De ce fait, durant l'enregistrement, l'utilisateur ne peut pas interagir avec l'application. 
+            
+            \vspace{0.2cm}
 
-                Une fois que l'utilisateur a saisi le nom de fichier, nous pouvons commencer à enregistrer avec la fonction de l'API PiCamera : \textbf{camera.start\_recording(nomDuFichier, format)}.
-                L'enregistrement restera actif tant que l'utilisateur ne clique pas sur le bouton "Stop".
-                L'arrêt de l'enregistrement se fait avec la fonction de l'API PiCamera : \textbf{camera.stop\_recording()}.
-
-                \vspace{0.2cm}
-                Lors des tests, nous avons remarqué qu'arrêter l'enregistrement de manière manuelle est parfois pas très optimale.
-                Nous avons donc décider de créer une fonction nous permettant de stopper de manière automatique l'enregistrement.
-
-                \vspace{0.2cm}
-
-                Il s'agit de permettre à l'utilisateur de saisir un temps en minutes et de lancer l'enregistrement.
-
-                \vspace{0.2cm}
-
-                Le temps saisi en minute de l'utilisateur sera converti en secondes.
-
-                De ce fait, l'API PiCamera nous permet de définir le temps d'enregistrement en secondes avec la fonction : \textbf{camera.wait\_recording(tempsEnSeconde)}.
-                
-                \vspace{0.2cm}
-
-                Cependant cette fonction possède un défaut, elle agit comme une fonction \textbf{wait()} classique. De ce fait, durant l'enregistrement, l'utilisateur ne peut pas interagir avec l'application.
-
-                Une fois que nous n'utilisons plus la caméra, nous pouvons couper toute utilisation de la caméra avec la fonction de l'API PiCamera : \textbf{camera.close()}.
-
-            \end{flushleft}
-
+            Une fois que nous n'utilisons plus la caméra, nous pouvons couper toute utilisation de la caméra avec la fonction de l'API PiCamera : \textbf{camera.close()}.
+            
         \subsection{Prendre une capture}
         La fonction prendre une capture est une fonction qui va nous permettre de prendre une photo.
         Cette fonction est érigée par la figure 4.10.
@@ -370,140 +329,101 @@
             \caption{Diagramme d'activité de la fonction "Prendre une capture"}
         \end{figure}
 
+        
+        Contrairement à la fonction \textbf{Démarrer un Enregistrement}, cette fonction est plus simple dans l'ensemble de son fonctionnement. 
+        
+        \vspace{0.2cm}
+
+        Tout d'abord, comme nous l'avons vu pour la fonction \textbf{Démarrer un Enregistrement}, nous allons initialiser la caméra. Une fois celle-ci initialisée, nous allons demander à l'utilisateur de saisir un nom de fichier et l'emplacement de sauvegarde. Une fois cela fait, il nous faudra préchauffer la caméra afin de pouvoir lancer la capture d'image. Avec la fonction \textbf{sleep()}, nous allons attendre un certain délai avant de lancer la capture.
+        Pour le préchauffage, 2-3 secondes suffiront.
+
+        \vspace{0.2cm}
+
+        Une fois cela fait, nous pouvons lancer la capture avec la fonction de l'API \textbf{camera.capture(nomDuFichier, format)}. Nous avons également décidé d'ajouter une fonction permettant de prendre des photos en continu.
+
+        \vspace{0.2cm}
+
+        Nous allons donc créer une fonction permettant de prendre des photos en continu.
+        Afin de pouvoir faire cela, nous allons demander à l'utilisateur de saisir un nom de fichier et l'emplacement de sauvegarde comme précédemment.
+        Mais avant cela, nous demandons à l'utilisateur de choisir le nombre de photos à prendre.
+
         \begin{flushleft}
-            Contrairement à la fonction \textbf{Démarrer un Enregistrement}, cette fonction est plus simple dans l'ensemble de son fonctionnement.
-
-            \vspace{0.2cm}
-
-            Tout d'abord, comme nous l'avons vu pour la fonction \textbf{Démarrer un Enregistrement}, nous allons initialiser la caméra.
-
-            \vspace{0.2cm}
-    
-            Une fois celle-ci initialisée, nous allons demander à l'utilisateur de saisir un nom de fichier et l'emplacement de sauvegarde.
-
-            \vspace{0.2cm}
-    
-            Une fois cela fait, il nous faudra préchauffer la caméra afin de pouvoir lancer la capture d'image.
-            
-            \vspace{0.2cm}
-    
-            Avec la fonction \textbf{sleep()}, nous allons attendre un certain délai avant de lancer la capture.
-            Pour le préchauffage, 2-3 secondes suffiront.
-
-            \vspace{0.2cm}
-    
-            Une fois cela fait, nous pouvons lancer la capture avec la fonction de l'API \textbf{camera.capture(nomDuFichier, format)}.
-            
-            \vspace{0.2cm}
-
-            Nous avons également décidé d'ajouter une fonction permettant de prendre des photos en continu.
-
-            \vspace{0.2cm}
-
-            Nous allons donc créer une fonction permettant de prendre des photos en continu.
-            Afin de pouvoir faire cela, nous allons demander à l'utilisateur de saisir un nom de fichier et l'emplacement de sauvegarde comme précédemment.
-            Mais avant cela, nous demandons à l'utilisateur de choisir le nombre de photos à prendre.
-
-            \vspace{0.2cm}
-
             Pour cela, nous utilisons une boucle telle que : 
             \begin{verbatim}
                 for nomDuFichier in camera.record_sequence(
                     '%d.h264' % i for i in range(1, nombreDePhoto)):
                 camera.wait_recording(6)
-            \end{verbatim}
-
-            Tant que le nombre de photos voulue n'est pas atteint, nous allons continuer à prendre des photos toutes les 6 secondes.
-
-            \vspace{0.2cm}
-
-            Nous avons mis un délai de 6 secondes entre chaque photo afin que la prise ne soit pas exactement identique à la précédente.
+            \end{verbatim}            
         \end{flushleft}
 
+        Tant que le nombre de photos voulue n'est pas atteint, nous allons continuer à prendre des photos toutes les 6 secondes. Nous avons mis un délai de 6 secondes entre chaque photo afin que la prise ne soit pas exactement identique à la précédente.
+    
+        \subsection{Travail en laboratoire}
+        Tout le système que nous avons créé jusqu'à maintenant est destiné à être utilisé dans un laboratoire. De ce fait, le module caméra sera installé sur une potence au-dessus d'un bac ou sera installé diverses espèces lors des expérimentations. Cette installation suit la figure 4.11.
+
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[scale=0.06]{setup.jpeg} 
+            \caption{Le dispositif installé dans le laboratoire}
+        \end{figure} 
+
+        Nous remarquons que le Raspberry Pi est installé sur une potence dans un boitier afin de le protéger des diverses éclaboussures, il en va de même pour la caméra qui se trouve en bas de la potence. Plus à gauche, nous pouvons voir l'écran tactile qui ne prend pas énormément de place, et qui est relativement amovible.
+
+        \vspace{0.2cm}
+
+        Nous avons également eu l'occasion de partir à la recherche de Gérridés dans la Mangrove de la Guadeloupe et d'en attraper à l'épuisette (voir Figure 4.12).
+
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[scale=0.08]{mangrove.jpeg}
+            \caption{Mangrove de la Guadeloupe}
+        \end{figure}
+            
         
 
-        \subsection{Travail en laboratoire}
-        Tout le système que nous avons créé jusqu'à maintenant est destiné à être utilisé dans un laboratoire.
-
-        \begin{flushleft}        
-            De ce fait, le module caméra sera installé sur une potence au-dessus d'un bac ou sera installé diverses espèces lors des expérimentations.
-
-            \vspace{0.2cm}
-
-            Cette installation suit la figure 4.11.
-
-            % \vspace{0.2cm}
-
-            \begin{figure}[ht]
-                \centering
-                \includegraphics[scale=0.06]{setup.jpeg} 
-                \caption{Le dispositif installé dans le laboratoire}
-            \end{figure}
-
-            Nous pouvons voir que le Raspberry Pi est installé sur une potence dans un boitier afin de le protéger des diverses éclaboussures, il en va de même pour la caméra qui se trouve en bas de la potence.
-
-            \vspace{0.2cm}
-
-            Plus à gauche, nous pouvons voir l'écran tactile qui ne prend pas énormément de place, et qui est relativement amovible.
-
-            \vspace{0.2cm}
-
-    
-            J'ai également eu l'occasion de partir à la recherche de Gérridés dans la Mangrove de la Guadeloupe et d'en attraper à l'épuisette (voir Figure 4.12).
-
-            \begin{figure}[ht]
-                \centering
-                \includegraphics[scale=0.08]{mangrove.jpeg}
-                \caption{Mangrove de la Guadeloupe}
-            \end{figure}
-            
-        \end{flushleft}
-
         \subsection{Travail sur la caméra}
-        Le module caméra est très certainement celle qui nous a posé le plus de problème.
+        Le module caméra est très certainement celle qui nous a posé le plus de problème. Pendant une grande partie des expérimentations, nous avons eu divers problèmes lors des enregistrements.
+
+        \vspace{0.2cm}
+
+        Commencent par des problèmes de stockage de la vidéo, pour nos expérimentations, nous devons réaliser des enregistrements d'une vingtaine de minutes.
+        Pour une vidéo de 20 minutes, nous avions besoin de plus de 4Go de mémoire.
+        Cela était trop grand pour le stockage de la vidéo sur le Raspberry Pi.
+
+        \vspace{0.2cm}
+
+        Nous avons également eux des soucis d'éclairage, qui provoquait des effets d'anneaux sur la vidéo, cela à plus ou moins été régler en modifiant le \underline{bitrate} de l'enregistrement ainsi qu'en mettant le dispositif projet dans un endroit où il n'y a pas d'éclairage.
+        L'utilisateur peut également modifier le contraste et la luminosité de la vidéo afin d'avoir un meilleur rendu.
+
+        \vspace{0.2cm}
+
+        Nous avons rencontré également deux autres problèmes qui sont notamment les effets de zoom lors de nos enregistrements qui étaient dus à une trop forte résolution de la caméra ainsi qu'un problème de saut d'image dans nos enregistrements. Cela étant dû au format de la vidéo, lors de la conversion vidéo en format mp4, ce souci n'apparaissait plus.
+
+        \vspace{0.2cm}
+
+        Cela laisse à supposer que l'écriture au format H264 n'était pas adapté pour la configuration de notre Raspberry Pi.
+
+        \subsection{Travail sur vidéo}
+        % Ajout de la partie mise au point de la vidéo
+        Après avoir utilisé notre dispositif lors des expérimentations, les biologistes ont besoin de résultat et pour ce faire nous devons extraire un certain nombre d'image des vidéos.
 
         \begin{flushleft}
-            Pendant une grande partie des expérimentations, nous avons eu divers problèmes lors des enregistrements.
-
-            \vspace{0.2cm}
-    
-            Commencent par des problèmes de stockage de la vidéo, pour nos expérimentations, nous devons réaliser des enregistrements d'une vingtaine de minutes.
-            Pour une vidéo de 20 minutes, nous avions besoin de plus de 4Go de mémoire.
-            Cela était trop grand pour le stockage de la vidéo sur le Raspberry Pi.
-    
-            \vspace{0.2cm}
-    
-            Nous avons également eux des soucis d'éclairage, qui provoquait des effets d'anneaux sur la vidéo, cela à plus ou moins été régler en modifiant le \underline{bitrate} de l'enregistrement ainsi qu'en mettant le dispositif projet dans un endroit où il n'y a pas d'éclairage.
-            L'utilisateur peut également modifier le contraste et la luminosité de la vidéo afin d'avoir un meilleur rendu.
-    
-            \vspace{0.2cm}
-    
-            Nous avons rencontré également deux autres problèmes qui sont notamment les effets de zoom lors de nos enregistrements qui étaient dus à une trop forte résolution de la caméra ainsi qu'un problème de saut d'image dans nos enregistrements. Cela étant dû au format de la vidéo, lors de la conversion vidéo en format mp4, ce souci n'apparaissait plus.
-    
-            \vspace{0.2cm}
-    
-            Cela laisse à supposer que l'écriture au format H264 n'était pas adapté pour la configuration de notre Raspberry Pi.
-    
-            \subsection{Travail sur vidéo}
-            % Ajout de la partie mise au point de la vidéo
-            Après avoir utilisé notre dispositif lors des expérimentations, les biologistes ont besoin de résultat et pour ce faire nous devons extraire un certain nombre d'image des vidéos.
-    
-            \vspace{0.2cm}
-
             Pour ce faire, nous utilisons une commande de ffmpeg :
-            
+        
             \begin{verbatim}
                 ffmpeg -i Nom_Vid.h264 -r .6 -q:v 1  ./Nom_Vid_%6d.jpg
-            \end{verbatim}
+            \end{verbatim}            
 
-            Nous remarquons que cela n'est pas simple d'utiliser cette commande, de ce fait nous avons créé une fonction permettant à l'utilisateur de choisir une vidéo ainsi que le dossier où il souhaite enregistrées les images extraites.
 
-            \vspace{0.2cm}
-
-            Une fois que nous avons nos images, nous pouvons les annoter avec un logiciel en ligne : \textbf{www.robots.ox.ac.uk}.
-            Mais le gros problème, c'est qu'il nous faut annoter les images de façon manuelle et une par une, et afin d'avoir des résultats précis il nous faut travailler avec d'énorme quantité d'image, pour un individu annoter environs 900 images n'est pas chose facile.
-
-            \vspace{0.2cm}
-
-            Nous allons donc voir dans la conclusion comment nous améliorer notre système pour que les biologistes puissent travailler avec plus de confort et de rapidité tout en ayant des résultats d'expérimentations de qualité.
         \end{flushleft}
+
+        Nous remarquons que cela n'est pas simple d'utiliser cette commande, de ce fait nous avons créé une fonction permettant à l'utilisateur de choisir une vidéo ainsi que le dossier où il souhaite enregistrées les images extraites. 
+        
+        \vspace{0.2cm}
+
+        Une fois que nous avons nos images, nous pouvons les annoter avec un logiciel en ligne : \textbf{www.robots.ox.ac.uk}.
+        Mais le gros problème, c'est qu'il nous faut annoter les images de façon manuelle et une par une, et afin d'avoir des résultats précis il nous faut travailler avec d'énorme quantité d'image, pour un individu annoter environs 900 images n'est pas chose facile.
+
+        \vspace{0.2cm}
+
+        Nous allons donc voir dans la conclusion comment nous améliorer notre système pour que les biologistes puissent travailler avec plus de confort et de rapidité tout en ayant des résultats d'expérimentations de qualité.
