--- a/src/tex/chapter_5.tex
+++ b/src/tex/chapter_5.tex
@@ -25,29 +25,27 @@
     \section{Perspectives futures}
     Durant ce stage, nous avons remplacé un dispositif permettant la capture vidéo de qualité en termes de vidéo grâce à la GoPro, mais n'était pas optimisé pour le travail en laboratoire.
 
-    \begin{flushleft}
-        De ce fait nous avons conçu un dispositif permettant la capture vidéo avec divers fonctionnalités grâce à l'application comme l'arrêt automatique des vidéos, prendre le nombre de photos souhaité en rafale, avec la possibilité d'avoir un rendu de la vidéo en temps réel dans les mains via à l'écran tactile.
+    % rappel de la question 
 
-        \vspace{0.2cm}
+    % humainement ce que j'ai appris 
+    % pose la question
+    % répodnre la question
+    % Limite 
 
-        Bien que nous perdions en qualité d'enregistrement vidéo et photo, nous avons réussi à réaliser un système optimal pour un moindre coût.
-
-        \vspace{0.2cm}
+    \vspace{0.2cm}
     
-        Mais le système n'est pas fixe, c'est à dire que nous pouvons changer le module caméra par un modèle plus performant afin d'avoir un meilleur rendu vidéo. 
+    De ce fait nous avons conçu un dispositif permettant la capture vidéo avec divers fonctionnalités grâce à l'application comme l'arrêt automatique des vidéos, prendre le nombre de photos souhaité en rafale, avec la possibilité d'avoir un rendu de la vidéo en temps réel dans les mains via à l'écran tactile. Bien que nous perdions en qualité d'enregistrement vidéo et photo, nous avons réussi à réaliser un système optimal pour un moindre coût.
 
-        \vspace{0.2cm}
+    \vspace{0.2cm}
 
-        Concernant l'application, nous pouvons améliorer le fait que l'application se bloque durant le mode rafale ou le mode d'enregistrement automatique en faisant du multiprocessus.
-        Cela nous permettrait de réaliser une tâche tout en faisant une autre.
+    Mais le système n'est pas fixe, c'est à dire que nous pouvons changer le module caméra par un modèle plus performant afin d'avoir un meilleur rendu vidéo. Concernant l'application, nous pouvons améliorer le fait que l'application se bloque durant le mode rafale ou le mode d'enregistrement automatique en faisant du multiprocessus.
+    Cela nous permettrait de réaliser une tâche tout en faisant une autre.
 
-        \vspace{0.2cm}
+    \vspace{0.2cm}
 
-        Il serait également intéressant d'automatiser l'annotation d'image, en effet annoter une grande quantité d'image est une tâche très longue.
+    Il serait également intéressant d'automatiser l'annotation d'image, en effet annoter une grande quantité d'image est une tâche très longue. Avec la prise de vue en temps réelle, nous pourrions annoter de manière automatique les images et en grande quantité sans que cela soit une tâche fastidieuse.
 
-        Avec la prise de vue en temps réelle, nous pourrions annoter de manière automatique les images et en grande quantité sans que cela soit une tâche fastidieuse.
-
-    \end{flushleft}
+    
 
 
     
