--- a/src/tex/definition.tex
+++ b/src/tex/definition.tex
@@ -1,50 +1,66 @@
 
-\begin{definition}
-    \newcommand{\lab}[1]{(\ref{#1})}
+\chapter*{Définition}
+    \begin{definition}
+        \newcommand{\lab}[1]{(\ref{#1})}
 
-    ARM : ARM est une société britannique spécialisée dans le développement de processeurs d'architecture 32 bits et d'architecture 64 bits de type RISC. Filiale de SoftBank1 depuis 2016. ARM développe également un grand nombre de blocs de propriété intellectuelle (IP). ARM est désormais présent dans le monde entier et son siège historique se situe à Cambridge.
+        ARM : ARM est une société britannique spécialisée dans le développement de processeurs d'architecture 32 bits et d'architecture 64 bits de type RISC. Filiale de SoftBank1 depuis 2016. ARM développe également un grand nombre de blocs de propriété intellectuelle (IP). ARM est désormais présent dans le monde entier et son siège historique se situe à Cambridge.
 
-    \label{def:ARM}
-\end{definition}
+        \label{def:ARM}
+    \end{definition}
 
 
-\begin{definition}
-    \newcommand{\lab}[2]{(\ref{#2})}
+    \begin{definition}
+        \newcommand{\lab}[2]{(\ref{#2})}
 
-    Overclocking : L'overclocking, ou parfois sur-cadencement1, ou surcadençage est une manipulation ayant pour but d'augmenter la fréquence du signal d'horloge d'un processeur au-delà de la fréquence nominale afin d'augmenter les performances de l'ordinateur.
+        Overclocking : L'overclocking, ou parfois sur-cadencement1, ou surcadençage est une manipulation ayant pour but d'augmenter la fréquence du signal d'horloge d'un processeur au-delà de la fréquence nominale afin d'augmenter les performances de l'ordinateur.
 
-    \label{def:Overclocking}
-\end{definition}
+        \label{def:Overclocking}
+    \end{definition}
 
-\begin{definition}
-    \newcommand{\lab}[3]{(\ref{#3})}
+    \begin{definition}
+        \newcommand{\lab}[3]{(\ref{#3})}
 
-    OS : Un système d'exploitation (ou système d'exploitation) est un ensemble de programmes et d'outils qui permettent d'exécuter des programmes sur un ordinateur.
+        OS : Un système d'exploitation (ou système d'exploitation) est un ensemble de programmes et d'outils qui permettent d'exécuter des programmes sur un ordinateur.
 
-    \label{def:OS}
-\end{definition}
+        \label{def:OS}
+    \end{definition}
 
-\begin{definition}
-    \newcommand{\lab}[4]{(\ref{#4})}
+    \begin{definition}
+        \newcommand{\lab}[4]{(\ref{#4})}
 
-    Paradigme : Un paradigme de programmation est une façon d'approcher la programmation informatique et de traiter les solutions aux problèmes et leur formulation dans un langage de programmation approprié.
+        Paradigme : Un paradigme de programmation est une façon d'approcher la programmation informatique et de traiter les solutions aux problèmes et leur formulation dans un langage de programmation approprié.
 
-    \label{def:Paradigme}
-\end{definition}
+        \label{def:Paradigme}
+    \end{definition}
 
-\begin{definition}
-    \newcommand{\lab}[5]{(\ref{#5})}
+    \begin{definition}
+        \newcommand{\lab}[5]{(\ref{#5})}
 
-    API : (Application Programming Interface) est une interface de programmation qui permet d'accéder à des fonctionnalités d'un logiciel.
+        API : (Application Programming Interface) est une interface de programmation qui permet d'accéder à des fonctionnalités d'un logiciel.
 
-    \label{def:API}
-\end{definition}
+        \label{def:API}
+    \end{definition}
 
-\begin{definition}
-    \newcommand{\lab}[6]{(\ref{#6})}
+    \begin{definition}
+        \newcommand{\lab}[6]{(\ref{#6})}
 
-    GUI : (Graphical User Interface) est une interface utilisateur graphique qui permet d'interagir avec un logiciel.
+        GUI : (Graphical User Interface) est une interface utilisateur graphique qui permet d'interagir avec un logiciel.
 
-    \label{def:GUI}
-\end{definition}
+        \label{def:GUI}
+    \end{definition}
 
+
+% \makeglossaries
+
+% \newglossaryentry{latex}
+% {
+%     name=latex,
+%     description={Is a markup language specially suited 
+%     for scientific documents}
+% }
+
+% \newglossaryentry{maths}
+% {
+%     name=mathematics,
+%     description={Mathematics is what mathematicians do}
+% }
