--- a/src/tex/thanks.tex
+++ b/src/tex/thanks.tex
@@ -1,11 +1,11 @@
 \vspace*{\fill}
     \begin{center}
-        \textbf{\large{Remerciments}} \\[2cm]
-        Je tiens à remercier tous ceux qui ont contribué à la réalisation de ce rapport de stage. \\[0.5cm]
+        \textbf{\large{Remerciements}} \\[2cm]
+        Je tiens à exprimer tous ceux qui ont contribué à la réalisation de ce rapport de stage. \\[0.5cm]
 
-        Tout d'abord, je tiens exprimé ma gratitude à Monsieur Manuel CLERGUE de m'avoir accepté et accompagné durant mon stage. \\[0.5cm]
+        Tout d'abord, je tiens exprimer ma gratitude à Monsieur Manuel CLERGUE de m'avoir accepté et accompagné durant mon stage. \\[0.5cm]
 
-        J'adresse mes remercîments à Monsieur Olivier GROS pour l'accueil chaleureuse au sein de l'équipe et de m'avoir fait partager ses connaissances et son expérience dans le domaine de la biologie. \\[0.5cm]
+        J'adresse mes Remerciements à Monsieur Olivier GROS pour l'accueil chaleureux au sein de l'équipe et de m'avoir fait partager ses connaissances et son expérience dans le domaine de la biologie. \\[0.5cm]
 
         Merci à tous les membres de l'équipe de Biologie de la Mangrove pour leur aide et leur soutien. \\[0.5cm]
     \end{center}
