--- a/src/tex/chapter_3.tex
+++ b/src/tex/chapter_3.tex
@@ -14,27 +14,26 @@
 
     \vspace{0.1cm}
 
-    \begin{flushleft}
-        Les membres de cette famille sont communément appelés araignées d’eau, mais ce sont des insectes, on ne peut donc pas parler d'araignées. Cette appellation vient sans doute du fait de leurs longues pattes. Leur capacité à se déplacer sur l'eau leur vaut aussi le nom de patineurs de l'eau.\\[0.1cm]
-
-        Afin de déterminer leur préférence, il est nécessaire d'avoir un dispositif adéquat de capture vidéo pour l'acquisition de données.
-    \end{flushleft}        
+    
+    Les membres de cette famille sont communément appelés araignées d’eau, mais ce sont des insectes, on ne peut donc pas parler d'araignées. Cette appellation vient sans doute du fait de leurs longues pattes. Leur capacité à se déplacer sur l'eau leur vaut aussi le nom de patineurs de l'eau.
+    Afin de déterminer leur préférence, il est nécessaire d'avoir un dispositif adéquat de capture vidéo pour l'acquisition de données.
+     
 
     \subsection{Positionnement du travail dans le projet}
-    
-    \begin{flushleft}
-        Le tout étant fait de façon manuelle, les biologistes accrochaient une GoPro au-dessus du bac et ensuite devaient la retirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était fonctionnel et leur permettait de réaliser des captures vidéo mais il leur fallait placer le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.\\[0.2cm]
+        Le tout étant fait de façon manuelle, les biologistes accrochaient une GoPro au-dessus du bac et ensuite devaient la retirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était fonctionnel et leur permettait de réaliser des captures vidéo mais il leur fallait placer le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.
+
+        \vspace{0.2cm}
         
-        Il fallait aussi que la GoPro soit connectée à un ordinateur afin de pouvoir récupérer les données.\\[0.2cm]
+        Il fallait aussi que la GoPro soit connectée à un ordinateur afin de pouvoir récupérer les données.
+        Ajouter à cela le démarrage et l'arrêt de l'enregistrement de manière manuelle entrainant régulièrement le déplacement du bac (avec les mouvements). La disposition de la GoPro ne permettait de bien voir la prévisualisation de la capture vidéo.
+        Les biologistes ont donc décidé d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.
 
-        Ajouter à cela le démarrage et l'arrêt de l'enregistrement de manière manuelle entrainant régulièrement le déplacement du bac (avec les mouvements). La disposition de la GoPro ne permettait de bien voir la prévisualisation de la capture vidéo.\\[0.2cm]
-
-        Les biologistes ont donc décidé d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.\\[0.2cm]
+        \vspace{0.2cm}
 
         % Transition provisoire ()
         Ce qui nous permets d'enchainer sur l'objectif qui en découlent, comment nous pourront améliorer le dispositif.
 
-    \end{flushleft}
+    
 
     \vspace{0.1cm}
 
@@ -42,25 +41,23 @@
 
     \section{Objectifs}
     
-    \begin{flushleft}
         L’objectifs du stage est de réaliser l’installation et de configurer un dispositif de capture vidéo réalisé par un Raspberry Pi ainsi que de développer une application conviviale pour la gestion des vidéos.
-        \\[0.2cm]
-
         Il sera donc question de permettre au biologiste de réaliser des captures vidéo de manière plus pratique.
-        A défaut d'avoir un dispositif non-fixe comme énoncé, nous réaliserons un dispositif qui sera fixe.\\[0.2cm]
+        A défaut d'avoir un dispositif non-fixe comme énoncé, nous réaliserons un dispositif qui sera fixe.
 
-        Ce dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence permettant de limiter voire supprimer les divers déplacements.\\[0.2cm]                
-        
-        Une application conviviale sera développée afin de permettre au biologiste de réaliser des captures vidéo plus facilement.\\[0.2cm]
+        \vspace{0.2cm}
 
-        Avec un écran nous pourront interagir avec l'application permettant de démarrer et d'arrêter un enregistrement.\\[0.2cm]
+        Ce dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence permettant de limiter voire supprimer les divers déplacements.                
+        Une application conviviale sera développée afin de permettre au biologiste de réaliser des captures vidéo plus facilement.
+        Avec un écran nous pourront interagir avec l'application permettant de démarrer et d'arrêter un enregistrement.
+        Ainsi avec l'application nous pourront avoir une prévisualisation de la capture vidéo.
 
-        Ainsi avec l'application nous pourront avoir une prévisualisation de la capture vidéo.\\[0.2cm]
+        \vspace{0.2cm}
     
-        Le but de cette application est de permettre aux biologistes de réaliser des captures vidéo enregistrées directement sur la carte SD de la Raspberry Pi.\\[0.2cm]
+        Le but de cette application est de permettre aux biologistes de réaliser des captures vidéo enregistrées directement sur la carte SD de la Raspberry Pi.
+        Il sera également possible de visualiser les capture vidéo enregistrées sur la carte SD du Raspberry Pi et si besoin de les récupérer à l'aide d'une clé USB ou un disque dur externe sans problème.
 
-        Il sera également possible de visualiser les capture vidéo enregistrées sur la carte SD du Raspberry Pi et si besoin de les récupérer à l'aide d'une clé USB ou un disque dur externe sans problème.\\[0.2cm]
+        \vspace{0.2cm}
 
         % Transition provisoire ()
-        Voyons maintenant comment faire.
-    \end{flushleft}
+        Voyons maintenant comment nous allons nous y prendre pour réaliser ce dispositif ainsi que l'application dédiée.
